# agimus-demos-franka-manipulation

./: CMakeLists.txt  README-calibration.md  README.md  bin_picking.py  calibration.py  create_graph.py  demo.launch  demo.yaml  play_path.py  robot.launch  rosparam.launch  run_calibration.py  script_hpp.py  simulation.launch  supervisor.py  t_less.py  tools_hpp.py
config/: calibrated-params.yaml  config.rviz
measurements/2023-03-13/: camera.xml  configuration_1  configuration_10  configuration_11  configuration_12  configuration_13  configuration_14  configuration_15  configuration_16  configuration_17  configuration_18  configuration_19  configuration_2  configuration_20  configuration_21  configuration_22  configuration_23  configuration_24  configuration_25  configuration_26  configuration_27  configuration_28  configuration_3  configuration_4  configuration_5  configuration_6  configuration_7  configuration_8  configuration_9  eMc.txt  eMc.yaml  pose_cPo_1.yaml  pose_cPo_10.yaml  pose_cPo_11.yaml  pose_cPo_12.yaml  pose_cPo_13.yaml  pose_cPo_14.yaml  pose_cPo_15.yaml  pose_cPo_16.yaml  pose_cPo_17.yaml  (+44 more)
measurements/2023-06-28/: camera.xml  configuration_1  configuration_10  configuration_11  configuration_12  configuration_13  configuration_14  configuration_15  configuration_16  configuration_17  configuration_18  configuration_19  configuration_2  configuration_20  configuration_21  configuration_22  configuration_23  configuration_24  configuration_25  configuration_26  configuration_27  configuration_28  configuration_29  configuration_3  configuration_30  configuration_4  configuration_5  configuration_6  configuration_7  configuration_8  configuration_9  eMc.txt  eMc.yaml  pose_cPo_1.yaml  pose_cPo_10.yaml  pose_cPo_11.yaml  pose_cPo_12.yaml  pose_cPo_16.yaml  pose_cPo_17.yaml  pose_cPo_19.yaml  (+45 more)
meshes/: camera-support.stl
scripts/: gripper_control.py
srdf/: demo.srdf
srdf/t-less/: obj_01.srdf
urdf/: demo.urdf.xacro  franka_hand.xacro  franka_robot.xacro  small_box.urdf  support.urdf.xacro  utils.xacro
